--- a/BootstrapIntroduction/Views/Authors/Index.cshtml
+++ b/BootstrapIntroduction/Views/Authors/Index.cshtml
@@ -34,6 +34,8 @@
         </tr>
     </tbody>
 </table>
+@Html.BuildNextPreviousLinks(queryOptions, "Index")
+
 @section Scripts {
     <script>
         function ViewModel(authors) {
