chapter 7 final changes added automapper

--- a/BootstrapIntroduction/Views/Authors/Index.cshtml
+++ b/BootstrapIntroduction/Views/Authors/Index.cshtml
@@ -1,6 +1,6 @@
-﻿@using BootstrapIntroduction.Models
+﻿@using BootstrapIntroduction.ViewModels
 
-@model IEnumerable<Author>
+@model IEnumerable<AuthorViewModel>
 
 @{
     ViewBag.Title = "Authors";
